--- a/services.css
+++ b/services.css
@@ -5,6 +5,7 @@
 #meine_projekte h2 {
   font-size: 50px;
   text-align: center;
+  margin-bottom: 50px;
 }
 .flex_container {
   margin-top: 50px;
